# hast

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  codex  fake_llm.py  litellm.py  pyproject.toml  write_incubator.py
.ai/: config.yaml  goals.yaml  plan_note.md  rules.md
docs/: 100x-roadmap.md  ARCHITECTURE.md  SCENARIO_DEMO.md  auto-handoff.md  being-integration-guide.md  being-integration-roadmap.md  core-quality-bdd-plan.md  decision-validation-parallel-plan.md  design.md  opus-alignment-review.md  opus_guide.md  oss-integration-plan.md  pain-points-and-desired-tools.md  python-rust-support-plan.md  roadmap.md  tmp.md  token-efficiency.md
notes/: being-integration-feedback.md
scripts/: mock_langgraph_worker.py
tests/: conftest.py  test_admission.py  test_admission_policy.py  test_architect.py  test_attempt.py  test_auto.py  test_auto_hard_policy.py  test_auto_parallel.py  test_auto_quality.py  test_auto_replan.py  test_auto_risk_merge.py  test_auto_runner_selection.py  test_auto_summary.py  test_cli_auto.py  test_cli_decision.py  test_cli_docs.py  test_cli_doctor.py  test_cli_events.py  test_cli_explore.py  test_cli_feedback.py  test_cli_focus.py  test_cli_immune.py  test_cli_inbox.py  test_cli_metrics.py  test_cli_observe.py  test_cli_orchestrate.py  test_cli_propose.py  test_cli_protocol.py  test_cli_queue.py  test_cli_retry.py  test_cli_sim.py  test_codetools.py  test_config.py  test_consumer_roles.py  test_context.py  test_contract.py  test_control_plane_contract.py  test_coverage_measure.py  test_dead_code.py  (+44 more)
(+144 files in other folders)
